scss/_dropdown.scss
// Custom dropdown replacing Bootstrap 3 dependency
// Only used for the projects nav dropdown

.nav-dropdown {
    display: inline-flex;
    flex-wrap: nowrap;
    align-items: stretch;
    position: relative;

    > a.nav-dropdown__link {
        font-size: $font-size-lg;
        height: 5rem;
        display: flex;
        align-items: center;
        justify-content: center;
        font-weight: bold;
        color: $color-gray;
        text-decoration: none;
        transition: all $transition-medium;
        border: none;
        background: none;
        padding: 0;

        &:hover {
            color: $color-black;
            text-decoration: underline;
        }
    }

    > .nav-dropdown__toggle {
        display: flex;
        align-items: center;
        padding: 0 0.3rem;
        background: none;
        border: none;
        cursor: pointer;
        font-size: inherit;
        font-family: inherit;
        color: $color-black;
    }

    .nav-dropdown__menu {
        display: none;
        position: absolute;
        top: 100%;
        left: 0;
        background-color: $color-white;
        border: $border-standard;
        z-index: $z-nav;
        min-width: 100%;

        a {
            display: block;
            padding: 0.3rem $space-lg;
            font-size: $font-size-base;
            color: $color-gray;
            text-decoration: none;
            white-space: nowrap;

            &:hover {
                color: $color-black;
                text-decoration: underline;
            }
        }
    }

    &.open .nav-dropdown__menu {
        display: block;
    }

    // On mobile, dropdown opens upward
    &.dropup .nav-dropdown__menu {
        top: auto;
        bottom: 100%;
    }
}

